--- a/devfiles/nodejs/1.0.1/meta.yaml
+++ b/devfiles/nodejs/1.0.1/meta.yaml
@@ -1,6 +1,6 @@
-name: nodejs
-displayName: NodeJS Runtime
-description: Stack with NodeJS 12
+name: nodejs-1.0.1
+displayName: NodeJS Runtime 2
+description: Stack with NodeJS 12 test 2
 tags: ["NodeJS", "Express", "ubi8"]
 projectType: "nodejs"
 language: "nodejs"
